# ChangeLog for sys-kernel/calculate-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-sources-2.6.32.22.ebuild,
  calculate-sources-2.6.32.22-r1.ebuild, -calculate-sources-2.6.34.6.ebuild,
  calculate-sources-2.6.34.7.ebuild:
  removed old version

*calculate-sources-2.6.35.5 (22 Sep 2010)

  22 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-sources-2.6.35.5.ebuild:
  New version of kernel.

*calculate-sources-2.6.32.22-r1 (22 Sep 2010)

  22 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-sources-2.6.32.22-r1.ebuild:
  Change eclass to calculate-kernel-old for kernel building.

*calculate-sources-2.6.34.6 (21 Sep 2010)

  21 Sep 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-sources-2.6.34.6.ebuild, calculate-sources-2.6.34.7.ebuild:
  Restore calculate-sources 2.6.34.6.

*calculate-sources-2.6.32.22 (21 Sep 2010)

  21 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-sources-2.6.32.20.ebuild, -calculate-sources-2.6.32.21.ebuild,
  +calculate-sources-2.6.32.22.ebuild:
  version bump

  09 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-sources-2.6.34.4.ebuild, calculate-sources-2.6.34.6.ebuild:
  Remove old version.

  30 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru> ChangeLog:
  bump new versions

*calculate-sources-2.6.34.5 (23 Aug 2010)
*calculate-sources-2.6.32.20 (23 Aug 2010)

  23 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-sources-2.6.32.19.ebuild, +calculate-sources-2.6.32.20.ebuild,
  +calculate-sources-2.6.34.5.ebuild:
  bump new versions

*calculate-sources-2.6.34.4 (16 Aug 2010)

  16 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -calculate-sources-2.6.34.1.ebuild, +calculate-sources-2.6.34.4.ebuild:
  bump new version

*calculate-sources-2.6.34.1 (06 Jul 2010)