@@ -2,6 +2,14 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-sources-2.6.35.6 (28 Sep 2010)
+*calculate-sources-2.6.32.23 (28 Sep 2010)
+
+  28 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +calculate-sources-2.6.32.23.ebuild, calculate-sources-2.6.35.5.ebuild,
+  +calculate-sources-2.6.35.6.ebuild:
+  bump versions
+
   23 Sep 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
   -calculate-sources-2.6.32.22.ebuild,
   calculate-sources-2.6.32.22-r1.ebuild, -calculate-sources-2.6.34.6.ebuild,
